# auto-qa

./: .autoqa.toml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
api/: main.py
docs/: about.md  cli.md  contributing.md  index.md  roadmap.md
roadmap/: index.html
search/: search_index.json
site/: index.html
site/about/: index.html
site/cli/: index.html
site/contributing/: index.html
src/cli/: main.py  test_main.py
src/common/: agent.py  llm.py  slack.py  test_agent.py  test_slack.py  test_utils.py  utils.py
src/graph/: prompt_node.py  test_prompt_node.py  test_workflow.py  workflow.py
